--- a/index.html
+++ b/index.html
@@ -7,50 +7,43 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <!-- GRILLE IMAGES -->
     <div class="container">
         <div class="grid-ctn">
-            <section style="background: url(images/pexels-asadphoto-1450353.jpg);background-size: cover;">
-                <div>
-                    <input type="checkbox" id="open0">
-                    <label for="open0"></label>
-                    <div class="text-hidden">
-                        <h1>Los Ageles</h1>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Mollitia quo nostrum fuga cum at soluta impedit corrupti veniam rem incidunt? Eius accusantium voluptate aliquid dignissimos dolore rerum quia perspiciatis incidunt.</p>
-                        <a href="">Voir plus</a>
-                    </div>
+            <!-- CARD IMAGES 1 -->
+            <section>
+                <img src="images/pexels-asadphoto-1450353.jpg" alt="image1">
+                <div class="text-hidden">
+                    <h1>Los Ageles</h1>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Mollitia quo nostrum fuga cum at soluta impedit corrupti veniam rem incidunt? Eius accusantium voluptate aliquid dignissimos dolore rerum quia perspiciatis incidunt.</p>
+                    <a href="#">Voir plus</a>
                 </div>
             </section>
-            <section style="background: url(images/pexels-pixabay-269583.jpg);background-size: cover;">
-                <div>
-                    <input type="checkbox" id="open1">
-                    <label for="open1"></label>
-                    <div class="text-hidden">
-                        <h1>New York</h1>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Mollitia quo nostrum fuga cum at soluta impedit corrupti veniam rem incidunt? Eius accusantium voluptate aliquid dignissimos dolore rerum quia perspiciatis incidunt.</p>
-                        <a href="">Voir plus</a>
-                    </div>
+            <!-- CARD IMAGES 2 -->
+            <section>
+                <img src="images/pexels-pixabay-269583.jpg" alt="image2">
+                <div class="text-hidden">
+                    <h1>New York</h1>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Mollitia quo nostrum fuga cum at soluta impedit corrupti veniam rem incidunt? Eius accusantium voluptate aliquid dignissimos dolore rerum quia perspiciatis incidunt.</p>
+                    <a href="#">Voir plus</a>
                 </div>
             </section>
-            <section style="background: url(images/pexels-pixabay-315998.jpg);background-size: cover;">
-                <div>
-                    <input type="checkbox" id="open2">
-                    <label for="open2"></label>
-                    <div class="text-hidden">
-                        <h1>Dallas City</h1>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Mollitia quo nostrum fuga cum at soluta impedit corrupti veniam rem incidunt? Eius accusantium voluptate aliquid dignissimos dolore rerum quia perspiciatis incidunt.</p>
-                        <a href="">Voir plus</a>
-                    </div>
+            <!-- CARD IMAGES 3 -->
+            <section>
+                <img src="images/pexels-pixabay-315998.jpg" alt="image2">
+                <div class="text-hidden">
+                    <h1>Dallas City</h1>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Mollitia quo nostrum fuga cum at soluta impedit corrupti veniam rem incidunt? Eius accusantium voluptate aliquid dignissimos dolore rerum quia perspiciatis incidunt.</p>
+                    <a href="#">Voir plus</a>
                 </div>
             </section>
-            <section style="background: url(images/pexels-pixabay-38238.jpg);background-size: cover;">
-                <div>
-                    <input type="checkbox" id="open3">
-                    <label for="open3"></label>
-                    <div class="text-hidden">
-                        <h1>Danemark</h1>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Mollitia quo nostrum fuga cum at soluta impedit corrupti veniam rem incidunt? Eius accusantium voluptate aliquid dignissimos dolore rerum quia perspiciatis incidunt.</p>
-                        <a href="">Voir plus</a>
-                    </div>
+            <!-- CARD IMAGES 4 -->
+            <section>
+                <img src="images/pexels-pixabay-38238.jpg" alt="image3">
+                <div class="text-hidden">
+                    <h1>Danemark</h1>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Mollitia quo nostrum fuga cum at soluta impedit corrupti veniam rem incidunt? Eius accusantium voluptate aliquid dignissimos dolore rerum quia perspiciatis incidunt.</p>
+                    <a href="#">Voir plus</a>
                 </div>
             </section>
         </div>
